--- a/src/styling/nav.css
+++ b/src/styling/nav.css
@@ -2,9 +2,8 @@ nav {
     padding: 2rem 0 1rem 0;
     font-size: 1.5rem;
     display: flex;
-    /* position: relative; */
     flex-wrap: wrap;
-    justify-content:end;
+    justify-content:flex-end;
     align-items: center;
     background-color: black;
     opacity: 1;
