--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,76 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.signInPage {
+  background: url('https://wallpapercave.com/wp/wp4030802.jpg');
+  background-size: cover;
+  height: 72em;
+  width: 100%;
+  /* position: relative; */
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.signUpPageNow {
+  background: url('https://wallpapercave.com/wp/wp4030802.jpg');
+  background-size: cover;
+  height: 72em;
+  width: 100%;
+  /* position: relative; */
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.signIn {
+  color: white;
+  
+}
+
+.signUpNow {
+  color: white;
+  
+}
+.loginLabel, .RegloginLabel {
+  font-size: 30px;
+  letter-spacing: 3px;
+  margin-bottom: 5px;
+}
+.signInPage input, .signUpPageNow input{
+  height: 30px;
+  width: 300px;
+  border-top: none;
+  border-radius: 5px;
+  border-right: none;
+  border-left: none;
+  margin-bottom: 20px;
+  background-color: rgb(71, 71, 71);
+  font-size: 20px;
+}
+.signIn h1 {
+  font-size: 80px;
+  letter-spacing: 10px;
+  margin-top: 10%;
+  margin-bottom: 0;
+}
+.signUpNow h1 {
+  font-size: 80px;
+  letter-spacing: 10px;
+  margin-top: 10%;
+  margin-bottom: 25pxpx;
+}
+
+form {
   display: flex;
   flex-direction: column;
+  flex-wrap: wrap;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  
+}
+
+.sib, .sub{
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  margin-top: 30px;
+  font-size: 30px;
+  height: 40px;
+  width: 500px;
+  border-radius: 10px;
+  background-color: transparent;
+  letter-spacing: 8px;
+  font-weight: bold;
 }
