--- a/src/App.css
+++ b/src/App.css
@@ -42,6 +42,7 @@
   margin-bottom: 20px;
   background-color: rgb(71, 71, 71);
   font-size: 20px;
+  color: white;
 }
 .signIn h1 {
   font-size: 80px;
