--- a/src/styling/dietplan.css
+++ b/src/styling/dietplan.css
@@ -6,16 +6,20 @@
 .dietPlanArray {
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
     justify-content: space-evenly;
     align-items: center;
-    height: 210vh;
 }
 
-.dpImage, .dpName {
-    max-height: 900px;
-    max-width: 900px;
+.dp img {
+    max-height: 600px;
+    max-width: 600px;
     width: 40vh;
     border-radius: 10px;
+}
+
+.dp h1 .dpName {
+    font-size: 10px;
 }
 
 .dp {
@@ -35,13 +39,15 @@
 
 .update {
     margin: 0;
+    margin-bottom: 20px;
     height: 30px;
     border-radius: 10px;
     background-color: transparent;
     color: white;
 }
 .add {
-    margin: 0;
+    margin: 20px;
+    margin-top: 20px;
     margin-bottom: 60px;
     height: 50px;
     width: 400px;
@@ -52,7 +58,20 @@
 }
 a, a:visited { color: white; }
 
+.dietPlanArray img {
+    height: 300px;
+    width: 400px;
+}
+
 .dietPage a {
     text-decoration: none;
+}
+
+.healthslongs {
+    color: white;
+    margin-top: 0;
+    text-align: left;
+    margin-left: 50px;
+    letter-spacing: 5px;
 }
 
