--- a/src/styling/home.css
+++ b/src/styling/home.css
@@ -10,6 +10,7 @@
     object-fit: cover;
     object-position: center;
     position: relative;
+    background-size: contain;
 }
 .homePageTitle h1 {
     font-size: 70px;
