--- a/src/styling/nav.css
+++ b/src/styling/nav.css
@@ -14,6 +14,7 @@ nav a {
     text-decoration: none;
     text-transform: uppercase;
     color: white;
+    text-shadow: #FC0 1px 0 10px;
 
 }
 nav a:hover {
