--- a/src/styling/home.css
+++ b/src/styling/home.css
@@ -7,10 +7,11 @@
     margin: 0 0 2rem 0;
 }
 .homePageTitle img {
-    object-fit: cover;
+    object-fit: contain;
+    height: 100%;
     object-position: center;
     position: relative;
-    background-size: contain;
+    /* background-size: contain; */
 }
 .homePageTitle h1 {
     font-size: 70px;
