--- a/src/styling/about.css
+++ b/src/styling/about.css
@@ -6,19 +6,35 @@
     color: white;
     text-align: center;
     display: flex;
-  align-items: flex-start;
-  justify-content: space-between;
+    flex-wrap: wrap;
+    justify-content: flex-end;
+    gap: 10px 10%;
 }
 .about h1 {
+    margin-top: 200px;
+    margin-bottom: 0;
+    font-size: 175px;
+   
+}
+
+.about h2 {
     margin-top: 0;
-    padding-top: 100px;
-    font-size: 100px;
+    font-size: 40px;
 }
 .aboutdesc {
     font-size: 30px;
-    border: 1px solid white;
     height: 500px;
     width: 500px;
-    display: flex;
-    flex-direction: column-reverse;
+   
+}
+
+.aboutdesc p {
+    text-align: justify;
+    margin-right: 80px;
+    margin-top: 150px;
+}
+
+span {
+    font-size: 100px;
+    color: gold;
 }
